Replaced old Arrays.asList() and Collections.singletonList() method calls by factory method calls on List and Set